flapivor/tests/m1/hopix/parser/good/116-for-1.hopix
val main =
  for i = 0 to 10 { nothing () }