flapivor/tests/m1/hopix/parser/bad/109-type-ascription-2.hopix
val main =
  (0 : 0)